# hazardest

./: .env  .gitignore  .tool-versions  README.md  euchre.py
backend/: manage.py  requirements.txt
backend/euchre/: apps.py
backend/hazardest/: db.sqlite3  manage.py  routing.py  serializers.py  settings.py  urls.py  views.py  viewsets.py  wsgi.py
backend/hazardest/game/: README.rst  admin.py  setup.cfg  urls.py
backend/hazardest/game/game.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
backend/hazardest/game/management/commands/: create_deck.py  reset_db.py  reset_dev_db.py
backend/hazardest/game/migrations/: 0001_initial.py  0011_trick.py  0012_rename_team_one_points_game_team_black_points_and_more.py  0014_rename_played_cards_trick_cards_played.py  0015_profile.py  0016_alter_profile_user.py  0017_profile_losses_profile_wins.py  0018_alter_player_unique_together.py
backend/hazardest/game/models/: card.py  choices.py  game.py  hand.py  player.py  primitives.py  profile.py  trick.py
backend/hazardest/game/serializers/: game.py  player.py  user.py
backend/hazardest/game/tests/: fixtures.py  test_game.py  test_hand.py
backend/hazardest/game/utils/: create_cards.py  env.py
backend/hazardest/game/viewsets/: game.py  user.py
backend/table/: admin.py  apps.py  consumers.py  models.py  routing.py  utils.py
frontend/: game_list.html  index.html
frontend/hazardest/: README.md  package.json
frontend/home/: index.html
frontend/play/: cards.css  deck.js  index.html  style.css  table.html
frontend/root/: app.js  index.html  package-lock.json  style.css
(+53 files in other folders)
